--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
       "files": [
          "src/Runner.php"
        ]
+    },
+    "scripts": {
+        "phpcs": "phpcs"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
